localize devise views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,7 +53,16 @@ en:
     password: "Password"
     change_password: "Change Password"
     password_confirmation: "Password Confirmation"
+    current_password: "Current Password"
     remember_me: "Remenber me"
+    forgot_password: "Forgot your password?"
+    no_password_confirm: "Didn't receive confirmation instructions?"
+    no_unlock_instructions: "Didn't receive unlock instructions?"
+    send_password_reset: "Send me reset password instructions"
+    leave_blank: "(leave blank if you don't want to change it)"
+    need_current_password: "(we need your current password to confirm your changes)"
+    cancel_account: "Cancel my account"
+    are_you_sure: "Are you sure?"
     news: "News"
     no_news: "No recently news"
     no_topics: "No recently topic news"
