--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -58,7 +58,16 @@ zh:
     password: "密码"
     change_password: "修改密码"
     password_confirmation: "确认密码"
+    current_password: "当前密码"
     remember_me: "记住我"
+    forgot_password: "忘记密码?"
+    no_password_confirm: "没有收到密码恢复信息?"
+    no_unlock_instructions: "没有收到解锁信息?"
+    send_password_reset: "发送密码重置信息"
+    leave_blank: "(如果不修改则不填)"
+    need_current_password: "(需要当前密码确认修改)"
+    cancel_account: "删除我的帐户"
+    are_you_sure: "确定此操作?"
     news: "新闻"
     no_news: "暂无新闻"
     no_topics: "没有新的话题"
@@ -304,6 +313,7 @@ zh:
         transport: "物流"
         transport_id: "物流单号"
       user:
+        password: "密码"
         im: "聊天工具"
         im_q: "QQ"
         bank_name: "开户银行"
