fixed some bugs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,7 @@ en:
     unread_message: "Unread Message"
 
   site:
+    name: "Boat166"
     label: "Site"
     welcome: "Welcome, ${name}"
     login: "Login"
