--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -38,6 +38,7 @@ zh:
     update_success: "更新成功"
     update_failed: "更新失败"
     save: "保存"
+    created_at: "创建时间"
 
   system:
     password_error: "密码错误"
@@ -70,7 +71,7 @@ zh:
     cancel_account: "删除我的帐户"
     are_you_sure: "确定此操作?"
     news: "新闻"
-    no_news: "暂无新闻"
+    no_news: "暂无公告"
     no_topics: "没有新的话题"
     no_articles: "没有新的文章"
     update: "更新"
@@ -95,6 +96,8 @@ zh:
     big_cash: "大额提现"
     small_cash: "小额提现"
     service: "平台服务"
+    running_task: "当前任务数"
+    user_number: "注册用户数"
 
   manage:
     message_box: "收件箱"
@@ -250,6 +253,7 @@ zh:
 
   trade:
     charged_at: "充值时间"
+    transaction_id: "充值交易单号"
     success: "交易己提交"
     error: "交易无法进行,交易数量必须大于0"
     approve_charge: "批准充值"
@@ -264,6 +268,8 @@ zh:
     manage_point: "发布点兑换管理"
     manage_payment: "充值管理"
     no_enough_money: "金额不足"
+    must_input: "如果充值交易通过银行转账,则必须填写交易单号"
+    bad_deal: "禁止胡乱填写交易单号,如经发现严肃处理"
 
   setting:
     point_ratio: "发布兑换比"
