--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -63,11 +63,12 @@ zh:
     current_password: "当前密码"
     remember_me: "记住我"
     forgot_password: "忘记密码?"
-    no_password_confirm: "没有收到激活邮件?"
-    no_unlock_instructions: "没有收到解锁邮件?"
+    no_password_confirm: "账号激活"
+    no_unlock_instructions: "账号解锁"
     send_password_reset: "发送密码重置信息"
     leave_blank: "(如果不修改则不填)"
     need_current_password: "(需要当前密码确认修改)"
+    send_unlock: "发送解锁邮件"
     cancel_account: "删除我的帐户"
     are_you_sure: "确定此操作?"
     news: "新闻"
