--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -13,6 +13,8 @@ zh:
     errors:
       messages: 
         record_invalid: "无效的记录"
+        not_saved: "信息未保存"
+
 zh:
   global:
     title: "标题"
@@ -41,6 +43,7 @@ zh:
     operate_failed: "操作失败"
     save: "保存"
     created_at: "创建时间"
+    time: "时间"
 
   system:
     password_error: "密码错误"
@@ -102,6 +105,7 @@ zh:
     service: "平台服务"
     running_task: "当前任务数"
     user_number: "注册用户数"
+    user_info: "用户信息"
 
   manage:
     message_box: "收件箱"
@@ -211,6 +215,7 @@ zh:
     current_login_at: "当前登录:"
     last_login_ip: "最后登录IP"
     current_login_ip: "当前登录IP"
+    registered_time: "注册时间"
     gender: "性别"
     birthday: "生日"
     male: "男"
@@ -383,6 +388,7 @@ zh:
         shop_paipai_url: "拍拍店铺地址"
         shop_youa_url: "有啊店铺地址"
         account_credit: "发布点"
+        current_sign_in_at: "上次登录时间"
       issue:
         title: "标题"
         content: "内容"
@@ -420,7 +426,7 @@ zh:
   
   time:
     formats:
-      default: "%Y年%b%d日 %A %H:%M:%S %Z"
+      default: "%Y年%b%d日 %A %H:%M:%S"
       short: "%b%d日 %H:%M"
       long: "%Y年%b%d日 %H:%M"
     am: "上午"
@@ -431,34 +437,34 @@ zh:
       half_a_minute: "半分钟"
       less_than_x_seconds:
         one: "不到一秒"
-        other: "不到 {{count}} 秒"
+        other: "不到 %{count} 秒"
       x_seconds:
         one: "一秒"
-        other: "{{count}} 秒"
+        other: "%{count} 秒"
       less_than_x_minutes:
         one: "不到一分钟"
-        other: "不到 {{count}} 分钟"
+        other: "不到 %{count} 分钟"
       x_minutes:
         one: "一分钟"
-        other: "{{count}} 分钟"
+        other: "%{count} 分钟"
       about_x_hours:
         one: "大约一小时"
-        other: "大约 {{count}} 小时"
+        other: "大约 %{count} 小时"
       x_days:
-        one: "一天"
-        other: "{{count}} 天"
+        one: "1 天"
+        other: "%{count} 天"
       about_x_months:
         one: "大约一个月"
-        other: "大约 {{count}} 个月"
+        other: "大约 %{count} 个月"
       x_months:
         one: "一个月"
-        other: "{{count}} 个月"
+        other: "%{count} 个月"
       about_x_years:
         one: "大约一年"
-        other: "大约 {{count}} 年"
+        other: "大约 %{count} 年"
       over_x_years:
         one: "一年多"
-        other: "{{count}} 年多"
+        other: "%{count} 年多"
     prompts:
       year: "年"
       month: "月"
@@ -510,8 +516,8 @@ zh:
     errors:
       template:
         header:
-          one: "有 1 个错误发生导致「{{model}}」无法被保存。"
-          other: "有 {{count}} 个错误发生导致「{{model}}」无法被保存。"
+          one: "有 1 个错误发生导致「%{model}」无法被保存。"
+          other: "有 %{count} 个错误发生导致「%{model}」无法被保存。"
         body: "如下字段出现错误："
       messages:
         inclusion: "不包含于列表中"
@@ -521,15 +527,15 @@ zh:
         accepted: "必须是可被接受的"
         empty: "不能留空"
         blank: "不能为空字符"
-        too_long: "过长（最长为 {{count}} 个字符）"
-        too_short: "過短（最短为 {{count}} 个字符）"
-        wrong_length: "长度非法（必须为 {{count}} 个字符）"
+        too_long: "过长（最长为 %{count} 个字符）"
+        too_short: "過短（最短为 %{count} 个字符）"
+        wrong_length: "长度非法（必须为 %{count} 个字符）"
         taken: "已经被使用"
         not_a_number: "不是数字"
-        greater_than: "必须大于 {{count}}"
-        greater_than_or_equal_to: "必须大于或等于 {{count}}"
-        equal_to: "必须等于 {{count}}"
-        less_than: "必须小于 {{count}}"
-        less_than_or_equal_to: "必须小于或等于 {{count}}"
+        greater_than: "必须大于 %{count}"
+        greater_than_or_equal_to: "必须大于或等于 %{count}"
+        equal_to: "必须等于 %{count}"
+        less_than: "必须小于 %{count}"
+        less_than_or_equal_to: "必须小于或等于 %{count}"
         odd: "必须为单数"
         even: "必须为双数"
