add new css style and customer service center

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -91,11 +91,14 @@ en:
     manage_center: "Manage Center"
     notice: "Notice"
     notice_center: "Notice Center"
+    online_service: "Online consult"
     user_manage: "User Manage"
     cash_task: "Cash Manage"
     big_cash: "Big Cash"
     small_cash: "Small Cash"
+    service_center: "Service Center"
     service: "Platform Service"
+    service_list: "Customer Service"
     running_task: "Running Task"
     user_number: "Registered User"
     user_info: "User Information"
