--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -102,7 +102,10 @@ zh:
     cash_task: "提现处理"
     big_cash: "大额提现"
     small_cash: "小额提现"
+    service_center: "客服中心"
+    online_service: "在线咨询"
     service: "平台服务"
+    service_list: "客服列表"
     running_task: "当前任务数"
     user_number: "注册用户数"
     user_info: "用户信息"
