--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -46,6 +46,7 @@ zh:
     time: "时间"
     day: "天"
     hour: "小时"
+    yuan: "元"
 
   system:
     password_error: "密码错误"
@@ -278,7 +279,9 @@ zh:
     unused: "未使用"
     used: "己使用"
     closed: "停用"
+    reuse: "重新使用"
     choose: "购买"
+    used_times: "使用次数"
     choosed: "己有该单号"
     check_pass: "验证通过"
 
@@ -303,6 +306,8 @@ zh:
     no_enough_money: "金额不足"
     must_input: "如果充值交易通过银行转账,则必须填写交易单号"
     bad_deal: "禁止胡乱填写交易单号,如经发现严肃处理"
+    buy_transport: "购买运单号码"
+    spend: "消费"
 
   setting:
     point_ratio: "发布兑换比"
@@ -398,13 +403,13 @@ zh:
         worker_level: "接手人级别"
         real_level: "真实信用级别"
         task_day: "完成时间"
-        extra_word: "附加词语"
+        extra_word: "是否带字好评"
         avoid_day: "重复天数"
         task_level: "任务级别"
         custom_judge: "自定义评价"
         custom_judge_content: "自定义评价内容"
-        transport: "物流"
-        transport_id: "物流单号"
+        tran_type: "物流"
+        tran_id: "物流单号"
         published_time: "发布时间"
         takeover_time: "接手时间"
         finished_time: "完成时间"
@@ -439,13 +444,27 @@ zh:
         source: "来源"
         real_tran: "真实单号"
         tran_time: "时间"
+      participant:
+        name: "名称"
+        url: "网址"
+        status: "状态"
+        active: "使用中"
+        part_id: "帐号"
     hints:
       task:
         title: "为任务写一个标题"
-        task_type: "taobao, paipai, 等等."
-        description: "为任务写一些描述性的文字"
+        task_type: "taobao, paipai, 等等.还可发布虚拟任务,以及提现任务"
+        status: "必须选择发布之后,任务才会发布到任务中心,任务发布之后,不能修改,请认真核实"
+        link: "真实交易链接"
+        tran_type: "发货的快递公司,如果不选系统自动随机生成"
+        tran_id: "发货的运单号,如果不填系统自动生成"
+        description: "为任务写一些描述性的文字,可以不写"
+        worker_level: "接任务人在平台中的级别,不选则任何级别的平台用户都可见"
+        real_level: "指定接任务人小号的级别"
+        task_day: "多少天完成给评价"
         avoid_day: "设置多少天内同一买家不能接受任务"
-        custom_judge: "必须选中附加词语才有效"
+        custom_judge: "必须选中带字好评,此项才会生效"
+        custom_judge_content: "要求接任务的买家在评价中填写的内容,必须选中自定义评价此项才有效"
         transport_id: "如果不填系统自动生成一个单号"
       user:
         role_objects: "分配用户的权限"
