--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -48,6 +48,7 @@ zh:
     hour: "小时"
     yuan: "元"
     task: "任务数"
+    modify: "修改"
 
   system:
     password_error: "密码错误"
@@ -116,6 +117,8 @@ zh:
     user_number: "注册用户数"
     user_info: "用户信息"
     transport_center: "运单市场"
+    operate_password: "操作码管理"
+    old_password: "旧密码"
 
   manage:
     message_box: "收件箱"
@@ -216,6 +219,7 @@ zh:
     manage_description: "管理个人帐户信息"
     edit_account: "编辑帐户"
     update_success: "帐号更新成功"
+    update_failed: "帐号更新失败"
     register_success: "注册成功"
     register_failed: "注册失败"
     login: "登录"
@@ -242,6 +246,8 @@ zh:
     trade_log: "交易记录"
     task_log: "任务记录"
     level: "级别"
+    operate_password: "操作密码"
+    operate_password_desc: "如果没有设置可不填,密码不正确无法发布任务"
 
   participant:
     user: "用户"
@@ -279,7 +285,7 @@ zh:
     running: "执行中"
     total_task: "发布任务总数"
     total_todo: "接手任务总数"
-    not_enough_point: "没有足够发布点或余额"
+    not_enough_point: "没有足够发布点或余额, 或者操作码不正确"
     point: "发布点"
     can_not_delete: "无法删除该任务"
 
@@ -367,6 +373,13 @@ zh:
   message:
     make_read: "己读"
     make_unread: "未读"
+    total_message: "有%{total}条新的消息,请注意查看"
+    task_takeover: "任务 %{task} 己被接手,请关注"
+    task_takeover_content: "任务 %{task} 己被接手,<br>任务链接 http://www.boat166.com/message/%{link}"
+    task_finish: "任务 %{task} 己完成"
+    task_finish_content: "任务 %{task} 己完成,<br>任务链接 http://www.boat166.com/message/%{link}"
+    task_confirm: "任务 %{task} 己确认"
+    task_confirm_content: "任务 %{task} 己确认,<br>任务链接 http://www.boat166.com/message/%{link}"
 
   home: 
     title1: "服务"
@@ -443,6 +456,7 @@ zh:
         shop_youa_url: "有啊店铺地址"
         account_credit: "发布点"
         current_sign_in_at: "上次登录时间"
+        operate_password: "操作码"
       issue:
         title: "标题"
         content: "内容"
@@ -470,7 +484,7 @@ zh:
         priority: "优先级"
     hints:
       task:
-        title: "为任务写一个标题"
+        title: "为任务写一个标题,必须大于5个字"
         task_type: "taobao, paipai, 等等.还可发布虚拟任务,以及提现任务"
         status: "必须选择发布之后,任务才会发布到任务中心,任务发布之后,不能修改,请认真核实"
         link: "真实交易链接"
@@ -487,6 +501,7 @@ zh:
       user:
         role_objects: "分配用户的权限"
         im: "任何聊天工具的帐号都可填在这里"
+        operate_password: "不超过20位"
     actions:
       create: "创建"
       update: "保存"
