--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -255,7 +255,7 @@ zh:
     paipai: "拍拍"
     youa: "有啊"
     shop: "店铺"
-    customer: "买家"
+    customer: "买号"
 
   task:
     problem: "投诉"
@@ -288,6 +288,7 @@ zh:
     total_task: "发布任务总数"
     total_todo: "接手任务总数"
     not_enough_point: "没有足够发布点或余额, 或者操作码不正确"
+    not_bind_shop: "没有绑定店铺,无法创建任务"
     point: "发布点"
     can_not_delete: "无法删除该任务"
 
@@ -441,6 +442,7 @@ zh:
         takeover_time: "接手时间"
         finished_time: "完成时间"
         confirmed_time: "确认时间"
+        shop: "店铺名"
       user:
         role_objects: "用户角色"
         password: "密码"
@@ -478,18 +480,20 @@ zh:
         status: "状态"
         active: "默认"
         part_id: "帐号"
-        part_type: "帐号类型"
+        part_type: "帐号类别"
+        role_type: "帐号类型"
       message:
         title: "标题"
         content: "内容"
         status: "状态"
         priority: "优先级"
+        msg_type: "消息类型"
     hints:
       task:
         title: "为任务写一个标题,必须大于5个字"
         task_type: "taobao, paipai, 等等.还可发布虚拟任务,以及提现任务"
         status: "必须选择发布之后,任务才会发布到任务中心,任务发布之后,不能修改,请认真核实"
-        link: "真实交易链接"
+        link: "真实交易链接,链接的商品必须是店铺里的商品"
         tran_type: "发货的快递公司,如果不选系统自动随机生成"
         tran_id: "发货的运单号,如果不填系统自动生成"
         description: "为任务写一些描述性的文字,可以不写"
@@ -500,6 +504,7 @@ zh:
         custom_judge: "必须选中带字好评,此项才会生效"
         custom_judge_content: "要求接任务的买家在评价中填写的内容,必须选中自定义评价此项才有效"
         transport_id: "如果不填系统自动生成一个单号"
+        shop: "店铺名称,必须和绑定的店铺对应"
       user:
         role_objects: "分配用户的权限"
         im: "任何聊天工具的帐号都可填在这里"
@@ -516,7 +521,7 @@ zh:
   date:
     formats:
       default: "%Y-%m-%d"
-      short: "%b%d日"
+      short: "%m%d日"
       long: "%Y年%b%d日"
     day_names: [星期日, 星期一, 星期二, 星期三, 星期四, 星期五, 星期六]
     abbr_day_names: [日, 一, 二, 三, 四, 五, 六]
@@ -527,7 +532,7 @@ zh:
   time:
     formats:
       default: "%Y年%b%d日 %A %H:%M:%S"
-      short: "%b%d日 %H:%M"
+      short: "%y-%m-%d %H:%M"
       long: "%Y年%b%d日 %H:%M"
     am: "上午"
     pm: "下午"
