--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -51,6 +51,7 @@ zh:
     task: "任务数"
     modify: "修改"
     system: "系统"
+    existed: "在数据库中己有该记录"
 
   system:
     password_error: "密码错误"
@@ -122,6 +123,7 @@ zh:
     transport_center: "运单市场"
     operate_password: "操作码管理"
     old_password: "旧密码"
+    register_success: "注册成功"
 
   manage:
     message_box: "收件箱"
@@ -521,6 +523,8 @@ zh:
         role_objects: "分配用户的权限"
         im: "任何聊天工具的帐号都可填在这里"
         operate_password: "不超过20位"
+      participant:
+        part_id: "掌柜名或者旺旺名"
     actions:
       create: "创建"
       update: "保存"
